# MLRecruiters-BackEnd

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  Procfile  README.md  manage.py  mkdocs.yml  poetry_export.bat  poetry_export.sh  pyproject.toml  pytest.ini
docs/: index.md
jobs/: admin.py  apps.py  filter.py  interfaces.py  models.py  permissions.py  schema.py  serializers.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_auto_20200523_1433.py  0003_historicalreview_review.py
ml_recruiters/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  security.txt
users/: adapter.py  admin.py  filter.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
